--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@iconify-json/heroicons": "^1.1.20",
+    "@iconify-json/simple-icons": "^1.1.97",
     "@nuxt/ui-pro": "^1.1.0",
+    "@nuxt/fonts": "^0.5.1",
+    "@unovis/ts": "^1.3.5",
+    "@unovis/vue": "^1.3.5",
+    "@vueuse/head": "^2.0.0",
+    "@vueuse/nuxt": "^10.9.0",
+    "date-fns": "^3.6.0",
     "nuxt": "^3.11.2",
     "vue": "^3.4.21",
+    "vue-composable": "^1.0.0-beta.24",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
