--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@iconify-json/heroicons": "^1.1.20",
     "@iconify-json/simple-icons": "^1.1.97",
-    "@nuxt/ui-pro": "^1.1.0",
     "@nuxt/fonts": "^0.5.1",
+    "@nuxt/ui-pro": "^1.1.0",
     "@unovis/ts": "^1.3.5",
     "@unovis/vue": "^1.3.5",
     "@vueuse/head": "^2.0.0",
     "@vueuse/nuxt": "^10.9.0",
+    "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "nuxt": "^3.11.2",
     "vue": "^3.4.21",
